tests/fixtures/invalid/i003/old_version.spec
spec "old" {
  version "0.9"
}

invariant basic_guarantee "Test" {
  guarantee """something"""
}
